ubuntu/22.04/p/py/python3.10-nopie/3.10.4-3ubuntu0.1/599c0abe-9dba-4f40-ae2a-777c20876d4c/_usr_bin_python3.10.strace.stderr
  File "<stdin>", line 1
    /usr/bin/python3.10
    ^
SyntaxError: invalid syntax
